--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -415,4 +415,7 @@
     <string name="firewall_purchase_msg">Buy the <i>%1$s</i> feature to start blocking connections</string>
     <string name="mitm_skip_notice">The mitm certificate does not seem to be installed. If you proceed, decryption may fail</string>
     <string name="mitm_wizard_description">Configure the device for the TLS decryption</string>
+    <string name="mitmproxy_opts">Additional mitmproxy options</string>
+    <string name="mitmproxy_opts_description">Provide additional options for mitmproxy</string>
+    <string name="mitm_addon_error">Error while starting the mitm addon. Check the log for details</string>
 </resources>
